--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1345,14 +1345,21 @@ header a:hover,.navbar-nav li a.active {
 05. ABOUT SECTION
 *===================================*/
 .benefit_box {
-	background-color: #023780;
-	border-radius: 10px;
-	padding: 15px 5px;
+    background-color: #023780;
+    border-radius: 10px;
+    padding: 0px 0px;
+    min-height: 350px;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
 }
 .benefit_box h6 {
 	color: #ffffff;
 	margin-bottom: 0;
 	margin-top: 10px;
+}
+.benefit_box img {
+    min-height: 260px;
 }
 /*===================================*
 05. END ABOUT SECTION
