--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -238,6 +238,8 @@ header.nav-fixed {
 .contact_form textarea {
 	height: 80px;
 }
+.pro  .lpnspeed{ margin-bottom: 20px; }
+
 }
 /* -------------------------------------------------
   max-width: 767px
