--- a/assets/css/gurpreet.css
+++ b/assets/css/gurpreet.css
@@ -55,3 +55,26 @@ section_margin {
     width: 30%;
     margin: 0 auto 15px;
 }
+
+
+.key-attributes-page p {
+    margin: 20px 0 0 0;
+}
+
+.key-attributes-page .bus {
+    margin: 40px 0 0 0;
+}
+
+
+.dcpg .bus ul p {
+    margin: 10px 0 15px 30px;
+}
+
+.dcpg-p p {
+    margin: 30px 0 0 0;
+}
+
+.left-box .bus ul li {
+    text-align: left;
+    margin: 0 0 10px 0;
+}
