--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1488,10 +1488,10 @@ header a:hover, .navbar-nav li a.active {
 *===================================*/
 
 .benefit_box {
-	background-color: #023780;
+	
 	border-radius: 10px;
 	padding: 0px 0px;
-	min-height: 350px;
+	
 	justify-content: center;
 	display: flex;
 	flex-direction: column;
@@ -1504,7 +1504,9 @@ header a:hover, .navbar-nav li a.active {
 }
 
 .benefit_box img {
-	min-height: 260px;
+    /* min-height: 260px; */
+    height: 270px;
+    width: 270px;
 }
 
 /*===================================*
