--- a/assets/css/rishav.css
+++ b/assets/css/rishav.css
@@ -114,3 +114,76 @@ ul.navbar-nav {
     display: flex;
     justify-content: center;
 }
+
+
+/*team      */
+.team-in {
+    margin-bottom: 50px;
+}
+
+.content_text_block big {
+    color: #e82c59;
+    font-weight: 700;
+    font-size: 30px;
+}
+
+.our-team{
+    text-align: center;
+    overflow: hidden;
+    position: relative;
+}
+
+
+
+.our-team img{
+    width: 100%;
+    height: auto;
+    transition: all 0.5s ease-in-out 0s;
+}
+.our-team:hover img{ transform: scale(1.2); }
+.our-team .social{
+    list-style: none;
+    padding: 30px 15px;
+    margin: 0;
+    background: #e62e58;
+    border-bottom-right-radius: 50px;
+    position: absolute;
+    top: 0;
+    left: -50%;
+    transition: all 0.4s ease-in-out 0s;
+}
+.our-team:hover .social{ left: 0; }
+.our-team .social li{ display: block; }
+.our-team .social li a{
+    display: block;
+    padding: 5px 0;
+    font-size: 18px;
+    color: #fff;
+    transition: all 0.3s ease-in-out 0s;
+}
+.our-team .social li:first-child a{ padding-top: 0; }
+.our-team .social li:last-child a{ padding-bottom: 0; }
+.our-team .social li a:hover{ color: #000; }
+.our-team .team-content{
+    width: 100%;
+    padding: 15px 10px;
+    background: rgba(0, 0, 0, 1);
+    position: relative;
+    bottom: 0;
+    left: 0;
+}
+.our-team .title{
+    font-size: 16px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    color: #fff;
+    margin: 0 0 5px 0;
+}
+.our-team .post{
+    display: block;
+    font-size: 14px;
+    color:#e62e58;
+}
+@media only screen and (max-width: 990px){
+    .our-team{ margin-bottom: 30px; }
+}
