--- a/assets/css/rishav.css
+++ b/assets/css/rishav.css
@@ -116,6 +116,19 @@ ul.navbar-nav {
 }
 
 
+
+
+.team-d p {
+    margin-bottom: 10px;
+    font-size: 20px;
+    margin-top: 30px;
+}
+
+
+
+
+
+
 /*team      */
 .team-in {
     margin-bottom: 50px;
