--- a/assets/css/rishav.css
+++ b/assets/css/rishav.css
@@ -1,28 +1,34 @@
 .bg-section {
-    
+
     padding-top: 4%;
     padding-bottom: 4%;
 }
+
 .as_featured_in {
     font-weight: 700;
     text-align: center;
     font-family: lato;
 }
+
 .as_featured_in_sub_heading {
     font-size: 19px;
     text-align: justify;
     padding: 0px 57px 0 57px;
 }
+
 .featured_logo {
     text-align: center;
 }
+
 .as_featured_in_logo {
     margin-top: 35px;
     position: relative;
 }
+
 .as_featured_in_logo img {
     filter: grayscale(100%);
 }
+
 .as_featured_in_logo img:hover {
     filter: grayscale(0%);
     cursor: pointer;
@@ -30,22 +36,27 @@
     transition: transform .2s;
     transform: rotate(-10deg) scale(1.1);
 }
-.as_featured_in_text{
+
+.as_featured_in_text {
     font-size: 22px;
     font-weight: 600;
 }
+
 .the-legacy ul li {
     display: flex;
     align-items: baseline;
     font-weight: 600;
 }
+
 .the-legacy ul li i {
     margin-right: 10px;
 }
+
 .custom-cont .container {
     max-width: 90%;
     margin: 0 auto;
 }
+
 .custom-cont .the-legacy img {
     width: 100%;
     /* margin: 0 auto; */
@@ -56,6 +67,7 @@
     background: #fff;
     text-align: center;
 }
+
 /* 
 #incentive p {
     background: #e82d5a;
@@ -93,6 +105,7 @@
     margin-left: 80px;
     position: relative;
 }
+
 .left-box p::before {
     position: absolute;
     content: "\f00c";
@@ -100,16 +113,20 @@
     left: -30px;
     top: 0;
 }
-.benefit_box img{
+
+.benefit_box img {
     margin: 0 auto;
 }
+
 ul.navbar-nav {
     display: flex;
     align-items: center;
 }
+
 .navbar {
     padding: 0px 60px;
 }
+
 #about .row {
     display: flex;
     justify-content: center;
@@ -140,7 +157,7 @@ ul.navbar-nav {
     font-size: 30px;
 }
 
-.our-team{
+.our-team {
     text-align: center;
     overflow: hidden;
     position: relative;
@@ -148,13 +165,17 @@ ul.navbar-nav {
 
 
 
-.our-team img{
+.our-team img {
     width: 100%;
     height: auto;
     transition: all 0.5s ease-in-out 0s;
 }
-.our-team:hover img{ transform: scale(1.2); }
-.our-team .social{
+
+.our-team:hover img {
+    transform: scale(1.2);
+}
+
+.our-team .social {
     list-style: none;
     padding: 30px 15px;
     margin: 0;
@@ -165,19 +186,36 @@ ul.navbar-nav {
     left: -50%;
     transition: all 0.4s ease-in-out 0s;
 }
-.our-team:hover .social{ left: 0; }
-.our-team .social li{ display: block; }
-.our-team .social li a{
+
+.our-team:hover .social {
+    left: 0;
+}
+
+.our-team .social li {
+    display: block;
+}
+
+.our-team .social li a {
     display: block;
     padding: 5px 0;
     font-size: 18px;
     color: #fff;
     transition: all 0.3s ease-in-out 0s;
 }
-.our-team .social li:first-child a{ padding-top: 0; }
-.our-team .social li:last-child a{ padding-bottom: 0; }
-.our-team .social li a:hover{ color: #000; }
-.our-team .team-content{
+
+.our-team .social li:first-child a {
+    padding-top: 0;
+}
+
+.our-team .social li:last-child a {
+    padding-bottom: 0;
+}
+
+.our-team .social li a:hover {
+    color: #000;
+}
+
+.our-team .team-content {
     width: 100%;
     padding: 15px 10px;
     background: rgba(0, 0, 0, 1);
@@ -185,18 +223,28 @@ ul.navbar-nav {
     bottom: 0;
     left: 0;
 }
-.our-team .title{
+
+.our-team .title {
     font-size: 16px;
     font-weight: bold;
     letter-spacing: 1px;
     color: #fff;
     margin: 0 0 5px 0;
 }
-.our-team .post{
+
+.our-team .post {
     display: block;
     font-size: 14px;
-    color:#e62e58;
+    color: #e62e58;
 }
-@media only screen and (max-width: 990px){
-    .our-team{ margin-bottom: 30px; }
+
+@media only screen and (max-width: 990px) {
+    .our-team {
+        margin-bottom: 30px;
+    }
+
+    .navbar {
+        padding: 0;
+    }
+
 }
