--- a/assets/css/rishav.css
+++ b/assets/css/rishav.css
@@ -197,6 +197,286 @@ ul.navbar-nav {
     font-size: 14px;
     color:#e62e58;
 }
+
+
+
+
+
+.roadmap_list li {
+    position: relative;
+    padding-left: 125px;
+    margin: 0;
+    padding-bottom: 40px;
+}
+.roadmap_list li:before {
+    content: "";
+    background: #E5E5E5;
+    height: 100%;
+    width: 3px;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+small.circle {
+    position: absolute;
+    left: -11px;
+    top: 0;
+    width: 25px;
+    height: 25px;
+    display: block;
+    background: #e73059;
+    border-radius: 50%;
+    z-index: 1;
+}
+.roadmap_list li span {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 30px;
+    text-align: center;
+    color: #E73059;
+    position: absolute;
+    left: 40px;
+    top: 0;
+}
+.roadmap_list li p {
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 22px;
+}
+.About_user {
+    padding: 0 40px;
+}
+.About_user .content_text_block {
+    border-radius: 30px;
+}
+.About_user .content_text_block p {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 172.5%;
+    color: #FFFFFF;
+    text-align: center;
+    padding: 45px 100px;
+}
+.content_text_block, .content_text_block p.white-text {
+    color: #000;
+}
+
+.blue_bg {
+    background: #000643;
+}
+.Roadmap_block_3 .content_text_block p {
+    font-size: 16px;
+    line-height: 28px;
+}
+.content_text_block p {
+    font-style: normal;
+    font-size: 16px;
+    line-height: 23px;
+    color: #151b31;
+    margin-bottom: 30px;
+}
+.Roadmap_block_3 .card {
+    margin: 0 0 15px;
+    border: none;
+    border-radius: 10px;
+}
+.accordion>.card {
+    overflow: hidden;
+}
+.card {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #e82d5a;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: .25rem;
+    color: #fff;
+}
+.collapse:not(.show) {
+    display: none;
+}
+
+.roadmap_page_products {
+    background: #000644;
+    padding: 40px;
+    margin: 70px 0;
+    color: #fff;
+}
+
+.products_block figcaption {
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 120.5%;
+    text-align: center;
+    color: #E73059;
+}
+.roadmap_page_products p{
+    color: #fff;
+}
+
+.section_heading {
+    max-width: 850px;
+    width: 100%;
+    padding: 0 15px;
+    margin: 0 auto 30px;
+}
+.lpnt_journy {
+    position: relative;
+}
+.journey-year {
+    width: 164px;
+    height: 164px;
+    border: 2px solid #E73059;
+    box-sizing: border-box;
+    border-radius: 50%;
+    padding: 25px 23px;
+    margin: 0 auto;
+}
+.journey-year span {
+    width: 114px;
+    height: 114px;
+    background: #E73059;
+    display: block;
+    border-radius: 50%;
+    line-height: 114px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 28px;
+    color: #FFFFFF;
+    text-align: center;
+    position: relative;
+    z-index: 3;
+}
+.journey_content h5 {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 172.5%;
+    color: #000000;
+}
+.white-text{
+    color:#fff;
+}
+.white-text p {
+    color: #fff;
+}
+.white-text h5 {
+    color: #fff;
+}
+ul.journey_content {
+    display: flex;
+    flex-wrap: wrap;
+}
+.journey_content h5 {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 172.5%;
+    color: #000000;
+}
+.j_ques, .j_ques_right {
+    position: relative;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+    border-radius: 12px;
+    padding: 18px;
+    margin-bottom: 70px;
+}
+.journey-year:before {
+    content: "";
+    background: #E6E6E6;
+    height: 100%;
+    width: 6px;
+    position: absolute;
+    left: 0;
+    top: 40px;
+    right: 0;
+    margin: 0 auto;
+    z-index: 0;
+}
+
+
+ul.journey_content li li {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 134.5%;
+    color: #000000;
+    position: relative;
+    padding-left: 13px;
+    margin: 5px 0 0;
+}
+
+ul.journey_content li span {
+    position: absolute;
+    left: 0;
+}
+.j_ques:after, .j_ques:before {
+    left: 100%;
+    top: 50%;
+    border: solid transparent;
+    content: "";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;}
+
+
+
+ 
+    .j_ques, .j_ques_right {
+        position: relative;
+        background: #FFFFFF;
+        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+        border-radius: 12px;
+        padding: 18px;
+        margin-bottom: 70px;
+    }
+
+
+
+    .journey-year.purple_bg span {
+        background: #263673;
+    }
+    .journey-year.green_bg span {
+        background: #00928c;
+    }
+
+    .journey-year {
+        width: 164px;
+        height: 164px;
+        border: 2px solid #E73059;
+        box-sizing: border-box;
+        border-radius: 50%;
+        padding: 25px 23px;
+        margin: 0 auto;
+    }
+    .j_ques, .j_ques_right {
+        width: 95%;
+    }
+    .j_ques, .j_ques_right {
+        position: relative;
+        background: #FFFFFF;
+        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+        border-radius: 12px;
+        padding: 18px;
+        margin-bottom: 70px;
+    }
+
+
+
+
+
+
+
+
+
+
+
 @media only screen and (max-width: 990px){
     .our-team{ margin-bottom: 30px; }
 }
