--- a/assets/css/rishav.css
+++ b/assets/css/rishav.css
@@ -471,10 +471,19 @@ ul.journey_content li span {
 
 
 
+.contact_info li
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+}
 
-
-
-
+#contact form{
+    border-right: 1px solid #e82c59;
+    padding-right: 20px;
+}
 
 
 @media only screen and (max-width: 990px){
